# regcoil_jax

./: .gitignore  CONTRIBUTING.md  PORTING_NOTES.md  PORT_NOTES.md  README.md  pyproject.toml
docs/: api.rst  conf.py  contributing.rst  design.rst  differentiable_coil_cutting.rst  differentiable_isosurface.rst  differentiable_poincare.rst  feature_matrix.rst  hybrid_design.rst  index.rst  installation.rst  io_reference.rst  optimization.rst  parity.rst  permanent_magnets.rst  porting_notes.rst  quadcoil_objectives.rst  references.rst  theory.rst  usage.rst  visualization.rst
examples/: README.md  regcoil_in.axisymmetrySanityTest_chi2K_regularization  regcoil_in.compareToMatlab1  regcoil_in.compareToMatlab1_option1  regcoil_in.lambda_search_1  regcoil_in.lambda_search_2_current_density_target_too_low  regcoil_in.lambda_search_4_chi2_B
regcoil_jax/: biot_savart_jax.py  build_basis.py  build_matrices_jax.py  cli.py  coil_current_optimization.py  coil_cutting.py  constants.py  diff_coil_cutting.py  diff_isosurface.py  dipole_optimization.py  dipoles.py  fieldlines.py  fieldlines_jax.py  fortran_verbose.py  geometry_fourier.py  geometry_torus.py  grids.py  hybrid_fields.py  io_bnorm.py  io_efit.py  io_focus.py  io_nescin.py  io_nescout.py  io_output.py  io_surface_fourier_table.py  io_vmec.py  io_vmec_input.py  isosurface_numpy.py  kernel.py  modes.py  offset_surface.py  optimize.py  permanent_magnets.py  plasma_vmec_straight_fieldline.py  quadcoil_objectives.py  run.py  sensitivity_jax.py  solve_jax.py  spectral_deriv.py  surface_metrics.py  (+5 more)
tests/: baselines.json  (+20 more)
(+97 files in other folders)
