[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regcoil_jax"
version = "0.0.1"
description = "JAX port of REGCOIL (examples/tests parity first)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4.25",
  "numpy>=1.24",
  "netCDF4>=1.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
]

[project.scripts]
regcoil_jax = "regcoil_jax.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["regcoil_jax*"]
